--- a/app/src/main/res/layout/activity_coffee.xml
+++ b/app/src/main/res/layout/activity_coffee.xml
@@ -1,168 +1,184 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-    <androidx.constraintlayout.widget.ConstraintLayout tools:context=".CoffeeActivity" android:layout_height="match_parent" android:layout_width="match_parent" xmlns:tools="http://schemas.android.com/tools" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:android="http://schemas.android.com/apk/res/android">
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/relativeLayout"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    tools:context=".CoffeeActivity">
 
-    <Button
-        android:id="@+id/button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Add to Order"
-        android:textSize="18sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.9" />
+
+    -
+
+
+    -
+
 
     <ImageView
         android:id="@+id/imageView4"
-        android:layout_width="132dp"
-        android:layout_height="191dp"
-        android:layout_marginTop="106dp"
-        app:layout_constraintEnd_toStartOf="@+id/radioGroup"
+        android:layout_width="163dp"
+        android:layout_height="240dp"
+        android:layout_marginTop="24dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.3"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@mipmap/coffeecup" />
 
 
-    -
-
     <RadioGroup
-        android:id="@+id/radioGroup"
+        android:id="@+id/coffeeSize"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="150dp"
+        android:layout_marginTop="64dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.85"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/imageView4"
         app:layout_constraintTop_toTopOf="parent">
 
         <RadioButton
-            android:id="@+id/radioButton"
+            android:id="@+id/Short"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Short"
             android:textSize="18sp" />
 
         <RadioButton
-            android:id="@+id/radioButton2"
+            android:id="@+id/Tall"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Tall"
             android:textSize="18sp" />
 
         <RadioButton
-            android:id="@+id/radioButton3"
+            android:id="@+id/Grande"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Grande"
             android:textSize="18sp" />
 
         <RadioButton
-            android:id="@+id/radioButton4"
+            android:id="@+id/Venti"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Venti"
             android:textSize="18sp" />
-
     </RadioGroup>
 
-
-    -
-
-    <LinearLayout
-        android:id="@+id/linearLayout5"
+    <Button
+        android:id="@+id/addToOrder"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="5dp"
-        android:orientation="vertical"
+        android:layout_marginBottom="24dp"
+        android:text="Add to Order"
+        android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/radioGroup"
-        app:layout_constraintVertical_bias="0.37">
+        app:layout_constraintStart_toStartOf="parent" />
 
-        <CheckBox
-            android:id="@+id/checkBox"
+    <LinearLayout
+        android:id="@+id/linearLayout3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="24dp"
+        android:layout_marginBottom="128dp"
+        android:orientation="horizontal"
+        app:layout_constraintBottom_toTopOf="@+id/addToOrder"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView4">
+
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Chocolate"
-            android:textSize="18sp" />
+            android:orientation="vertical">
 
-        <CheckBox
-            android:id="@+id/checkBox2"
+            <CheckBox
+                android:id="@+id/checkBox"
+                android:layout_width="wrap_content"
+                android:layout_height="100px"
+                android:text="Chocolate"
+                android:textSize="18sp" />
+
+            <CheckBox
+                android:id="@+id/checkBox2"
+                android:layout_width="wrap_content"
+                android:layout_height="100px"
+                android:text="Cream"
+                android:textSize="18sp" />
+
+            <CheckBox
+                android:id="@+id/checkBox3"
+                android:layout_width="wrap_content"
+                android:layout_height="100px"
+                android:text="Milk"
+                android:textSize="18sp" />
+
+            <CheckBox
+                android:id="@+id/checkBox4"
+                android:layout_width="wrap_content"
+                android:layout_height="100px"
+                android:text="Syrup"
+                android:textSize="18sp" />
+
+            <CheckBox
+                android:id="@+id/checkBox5"
+                android:layout_width="wrap_content"
+                android:layout_height="100px"
+                android:text="Whip Cream"
+                android:textSize="18sp" />
+        </LinearLayout>
+
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Cream"
-            android:textSize="18sp" />
+            android:orientation="vertical">
 
-        <CheckBox
-            android:id="@+id/checkBox3"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Milk"
-            android:textSize="18sp" />
+            <ImageView
+                android:id="@+id/imageView6"
+                android:layout_width="200px"
+                android:layout_height="100px"
+                app:srcCompat="@mipmap/syrup" />
 
-        <CheckBox
-            android:id="@+id/checkBox4"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Syrup"
-            android:textSize="18sp" />
+            <ImageView
+                android:id="@+id/imageView7"
+                android:layout_width="200px"
+                android:layout_height="100px"
+                app:srcCompat="@mipmap/cream" />
 
-        <CheckBox
-            android:id="@+id/checkBox5"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Whip Cream"
-            android:textSize="18sp" />
+            <ImageView
+                android:id="@+id/imageView8"
+                android:layout_width="200px"
+                android:layout_height="100px"
+                app:srcCompat="@mipmap/milk" />
+
+            <ImageView
+                android:id="@+id/imageView9"
+                android:layout_width="200px"
+                android:layout_height="100px"
+                app:srcCompat="@mipmap/caramel" />
+
+            <ImageView
+                android:id="@+id/imageView10"
+                android:layout_width="200px"
+                android:layout_height="100px"
+                app:srcCompat="@mipmap/whipped_cream" />
+
+        </LinearLayout>
 
     </LinearLayout>
 
-    <ImageView
-        android:id="@+id/imageView6"
-        android:layout_width="155dp"
-        android:layout_height="144dp"
-        android:layout_marginStart="55dp"
-        android:layout_marginTop="10dp"
-        app:layout_constraintStart_toStartOf="@+id/imageView8"
-        app:layout_constraintTop_toBottomOf="@+id/imageView4"
-        app:srcCompat="@mipmap/cream" />
-
-    <ImageView
-        android:id="@+id/imageView7"
-        android:layout_width="123dp"
-        android:layout_height="110dp"
-        android:layout_marginBottom="139dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/imageView10"
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/subtotal"
+        android:textSize="18sp"
+        app:layout_constraintBottom_toTopOf="@+id/addToOrder"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:srcCompat="@mipmap/caramel" />
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
+        app:layout_constraintVertical_bias="0.64" />
 
-    <ImageView
-        android:id="@+id/imageView8"
-        android:layout_width="122dp"
-        android:layout_height="123dp"
-        app:layout_constraintBottom_toTopOf="@+id/imageView7"
-        app:layout_constraintEnd_toStartOf="@+id/imageView9"
-        app:srcCompat="@mipmap/whipped_cream" />
-
-    <ImageView
-        android:id="@+id/imageView9"
-        android:layout_width="129dp"
-        android:layout_height="133dp"
-        android:layout_marginEnd="10dp"
-        app:layout_constraintBottom_toTopOf="@+id/imageView10"
-        app:layout_constraintEnd_toStartOf="@+id/linearLayout5"
-        app:srcCompat="@mipmap/milk" />
-
-    <ImageView
-        android:id="@+id/imageView10"
-        android:layout_width="118dp"
-        android:layout_height="89dp"
-        android:layout_marginEnd="25dp"
-        android:layout_marginBottom="15dp"
-        app:layout_constraintBottom_toTopOf="@+id/button"
-        app:layout_constraintEnd_toStartOf="@+id/linearLayout5"
-        app:srcCompat="@mipmap/syrup" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
