--- a/app/src/main/res/layout/activity_coffee.xml
+++ b/app/src/main/res/layout/activity_coffee.xml
@@ -2,24 +2,24 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout tools:context=".CoffeeActivity" android:layout_height="match_parent" android:layout_width="match_parent" xmlns:tools="http://schemas.android.com/tools" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <Button
-        android:id="@+id/button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Add to Order"
-        android:textSize="18sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.9" />
+        <Button
+            android:id="@+id/addToOrder"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/add_to_order"
+            android:textSize="18sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.483"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/quantityText" />
 
-    <ImageView
+        <ImageView
         android:id="@+id/imageView4"
         android:layout_width="132dp"
         android:layout_height="191dp"
         android:layout_marginTop="106dp"
-        app:layout_constraintEnd_toStartOf="@+id/radioGroup"
+        app:layout_constraintEnd_toStartOf="@+id/coffeeSize"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@mipmap/coffeecup" />
@@ -28,7 +28,7 @@
     -
 
     <RadioGroup
-        android:id="@+id/radioGroup"
+        android:id="@+id/coffeeSize"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="150dp"
@@ -38,31 +38,31 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <RadioButton
-            android:id="@+id/radioButton"
+            android:id="@+id/small"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Short"
+            android:text="@string/short_size"
             android:textSize="18sp" />
 
         <RadioButton
-            android:id="@+id/radioButton2"
+            android:id="@+id/tall"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Tall"
+            android:text="@string/tall_size"
             android:textSize="18sp" />
 
         <RadioButton
-            android:id="@+id/radioButton3"
+            android:id="@+id/grande"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Grande"
+            android:text="@string/grande_size"
             android:textSize="18sp" />
 
         <RadioButton
-            android:id="@+id/radioButton4"
+            android:id="@+id/venti"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Venti"
+            android:text="@string/venti_size"
             android:textSize="18sp" />
 
     </RadioGroup>
@@ -78,42 +78,47 @@
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/radioGroup"
+        app:layout_constraintTop_toBottomOf="@+id/coffeeSize"
         app:layout_constraintVertical_bias="0.37">
 
         <CheckBox
-            android:id="@+id/checkBox"
+            android:id="@+id/caramelBox"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Chocolate"
+            android:onClick="toggleAddIns"
+            android:text="@string/caramel"
             android:textSize="18sp" />
 
         <CheckBox
-            android:id="@+id/checkBox2"
+            android:id="@+id/creamBox"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Cream"
+            android:onClick="toggleAddIns"
+            android:text="@string/cream"
             android:textSize="18sp" />
 
         <CheckBox
-            android:id="@+id/checkBox3"
+            android:id="@+id/milkBox"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Milk"
+            android:onClick="toggleAddIns"
+            android:text="@string/milk"
             android:textSize="18sp" />
 
         <CheckBox
-            android:id="@+id/checkBox4"
+            android:id="@+id/syrupBox"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Syrup"
+            android:onClick="toggleAddIns"
+            android:text="@string/syrup"
             android:textSize="18sp" />
 
         <CheckBox
-            android:id="@+id/checkBox5"
+            android:id="@+id/whipCreamBox"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Whip Cream"
+            android:onClick="toggleAddIns"
+            android:text="@string/whipped_cream"
             android:textSize="18sp" />
 
     </LinearLayout>
@@ -160,9 +165,52 @@
         android:layout_width="118dp"
         android:layout_height="89dp"
         android:layout_marginEnd="25dp"
-        android:layout_marginBottom="15dp"
-        app:layout_constraintBottom_toTopOf="@+id/button"
         app:layout_constraintEnd_toStartOf="@+id/linearLayout5"
-        app:srcCompat="@mipmap/syrup" />
+        app:srcCompat="@mipmap/syrup"
+        tools:layout_editor_absoluteY="505dp" />
+
+    <TextView
+        android:id="@+id/textView5"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/subtotal"
+        app:layout_constraintBottom_toBottomOf="@+id/subtotalValue"
+        app:layout_constraintEnd_toStartOf="@+id/subtotalValue"
+        app:layout_constraintHorizontal_bias="0.361"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="1.0" />
+
+    <TextView
+        android:id="@+id/subtotalValue"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="40dp"
+        android:layout_marginEnd="272dp"
+        android:text="@string/zero_subtotal"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/textView7"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/quantity_label"
+        app:layout_constraintEnd_toStartOf="@+id/quantityText"
+        app:layout_constraintStart_toStartOf="parent"
+        tools:layout_editor_absoluteY="627dp" />
+
+    <EditText
+        android:id="@+id/quantityText"
+        android:layout_width="212dp"
+        android:layout_height="32dp"
+        android:layout_marginStart="34dp"
+        android:layout_marginTop="28dp"
+        android:layout_marginEnd="74dp"
+        android:ems="10"
+        android:inputType="number"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/textView7"
+        app:layout_constraintTop_toBottomOf="@+id/imageView10" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
