--- a/app/src/main/res/layout/activity_current_order.xml
+++ b/app/src/main/res/layout/activity_current_order.xml
@@ -8,10 +8,9 @@
 
     <ListView
         android:id="@+id/itemList"
-        android:layout_width="413dp"
-        android:layout_height="473dp"
-        android:layout_marginTop="256dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_width="415dp"
+        android:layout_height="376dp"
+        android:layout_marginTop="356dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -20,31 +19,44 @@
         android:id="@+id/button2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="64dp"
         android:text="@string/remove_from_cart"
-        tools:layout_editor_absoluteX="30dp"
-        tools:layout_editor_absoluteY="65dp" />
+        app:layout_constraintEnd_toStartOf="@+id/textView2"
+        app:layout_constraintHorizontal_bias="0.223"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/removeItem"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/place_order"
-        tools:layout_editor_absoluteX="30dp"
-        tools:layout_editor_absoluteY="154dp" />
+        app:layout_constraintBottom_toTopOf="@+id/itemList"
+        app:layout_constraintEnd_toEndOf="@+id/button2"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/button2"
+        app:layout_constraintVertical_bias="0.256" />
 
     <TextView
         android:id="@+id/textView2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="55dp"
+        android:layout_height="21dp"
+        android:layout_marginTop="124dp"
         android:text="@string/subtotal"
-        tools:layout_editor_absoluteX="260dp"
-        tools:layout_editor_absoluteY="125dp" />
+        app:layout_constraintEnd_toStartOf="@+id/textView3"
+        app:layout_constraintHorizontal_bias="0.921"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/textView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="36dp"
         android:text="@string/zero_subtotal"
-        tools:layout_editor_absoluteX="336dp"
-        tools:layout_editor_absoluteY="125dp" />
+        app:layout_constraintBottom_toBottomOf="@+id/removeItem"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.649" />
 </androidx.constraintlayout.widget.ConstraintLayout>
