--- a/app/src/main/res/layout/activity_coffee.xml
+++ b/app/src/main/res/layout/activity_coffee.xml
@@ -1,216 +1,214 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-    <androidx.constraintlayout.widget.ConstraintLayout tools:context=".CoffeeActivity" android:layout_height="match_parent" android:layout_width="match_parent" xmlns:tools="http://schemas.android.com/tools" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:android="http://schemas.android.com/apk/res/android">
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/relativeLayout"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    tools:context=".CoffeeActivity">
 
-        <Button
-            android:id="@+id/addToOrder"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/add_to_order"
-            android:textSize="18sp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.483"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/quantityText" />
 
-        <ImageView
+    -
+
+
+    -
+
+
+    <ImageView
         android:id="@+id/imageView4"
-        android:layout_width="132dp"
-        android:layout_height="191dp"
-        android:layout_marginTop="106dp"
-        app:layout_constraintEnd_toStartOf="@+id/coffeeSize"
+        android:layout_width="163dp"
+        android:layout_height="240dp"
+        android:layout_marginTop="64dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.3"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@mipmap/coffeecup" />
 
 
-    -
-
     <RadioGroup
-        android:id="@+id/coffeeSize"
+        android:id="@+id/sizeGroup"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="150dp"
+        android:layout_marginTop="126dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.85"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/imageView4"
         app:layout_constraintTop_toTopOf="parent">
 
         <RadioButton
-            android:id="@+id/small"
+            android:id="@+id/shortRadio"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/short_size"
+            android:onClick="toggleAddIns"
+            android:text="Short"
             android:textSize="18sp" />
 
         <RadioButton
-            android:id="@+id/tall"
+            android:id="@+id/tallRadio"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/tall_size"
+            android:onClick="toggleAddIns"
+            android:text="Tall"
             android:textSize="18sp" />
 
         <RadioButton
-            android:id="@+id/grande"
+            android:id="@+id/grandeRadio"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/grande_size"
+            android:onClick="toggleAddIns"
+            android:text="Grande"
             android:textSize="18sp" />
 
         <RadioButton
-            android:id="@+id/venti"
+            android:id="@+id/ventiRadio"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/venti_size"
+            android:onClick="toggleAddIns"
+            android:text="Venti"
             android:textSize="18sp" />
 
     </RadioGroup>
 
-
-    -
-
-    <LinearLayout
-        android:id="@+id/linearLayout5"
+    <Button
+        android:id="@+id/addToOrder"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="5dp"
-        android:orientation="vertical"
+        android:layout_marginBottom="24dp"
+        android:text="Add to Order"
+        android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/coffeeSize"
-        app:layout_constraintVertical_bias="0.37">
+        app:layout_constraintStart_toStartOf="parent" />
 
-        <CheckBox
-            android:id="@+id/caramelBox"
+    <LinearLayout
+        android:id="@+id/linearLayout3"
+        android:layout_width="276dp"
+        android:layout_height="226dp"
+        android:layout_marginTop="24dp"
+        android:layout_marginBottom="128dp"
+        android:orientation="horizontal"
+        app:layout_constraintBottom_toTopOf="@+id/addToOrder"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView4">
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="216dp"
+            android:layout_gravity="center_vertical"
+            android:orientation="vertical">
+
+            <CheckBox
+                android:id="@+id/caramelBox"
+                android:layout_width="wrap_content"
+                android:layout_height="100px"
+                android:layout_weight="3"
+                android:onClick="toggleAddIns"
+                android:text="@string/caramel"
+                android:textSize="18sp" />
+
+            <CheckBox
+                android:id="@+id/creamBox"
+                android:layout_width="wrap_content"
+                android:layout_height="100px"
+                android:layout_weight="3"
+                android:onClick="toggleAddIns"
+                android:text="Cream"
+                android:textSize="18sp" />
+
+            <CheckBox
+                android:id="@+id/milkBox"
+                android:layout_width="wrap_content"
+                android:layout_height="100px"
+                android:layout_weight="3"
+                android:onClick="toggleAddIns"
+                android:text="Milk"
+                android:textSize="18sp" />
+
+            <CheckBox
+                android:id="@+id/syrupBox"
+                android:layout_width="wrap_content"
+                android:layout_height="100px"
+                android:layout_weight="3"
+                android:onClick="toggleAddIns"
+                android:text="Syrup"
+                android:textSize="18sp" />
+
+            <CheckBox
+                android:id="@+id/whipCreamBox"
+                android:layout_width="wrap_content"
+                android:layout_height="100px"
+                android:layout_weight="3"
+                android:onClick="toggleAddIns"
+                android:text="Whip Cream"
+                android:textSize="18sp" />
+        </LinearLayout>
+
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:onClick="toggleAddIns"
-            android:text="@string/caramel"
-            android:textSize="18sp" />
+            android:orientation="vertical">
 
-        <CheckBox
-            android:id="@+id/creamBox"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:onClick="toggleAddIns"
-            android:text="@string/cream"
-            android:textSize="18sp" />
+            <ImageView
+                android:id="@+id/imageView9"
+                android:layout_width="match_parent"
+                android:layout_height="152px"
+                android:layout_weight="3"
+                tools:srcCompat="@mipmap/caramel" />
 
-        <CheckBox
-            android:id="@+id/milkBox"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:onClick="toggleAddIns"
-            android:text="@string/milk"
-            android:textSize="18sp" />
+            <ImageView
+                android:id="@+id/imageView7"
+                android:layout_width="match_parent"
+                android:layout_height="152px"
+                android:layout_weight="3"
+                app:srcCompat="@mipmap/cream" />
 
-        <CheckBox
-            android:id="@+id/syrupBox"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:onClick="toggleAddIns"
-            android:text="@string/syrup"
-            android:textSize="18sp" />
+            <ImageView
+                android:id="@+id/imageView8"
+                android:layout_width="match_parent"
+                android:layout_height="152px"
+                android:layout_weight="3"
+                tools:srcCompat="@mipmap/milk" />
 
-        <CheckBox
-            android:id="@+id/whipCreamBox"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:onClick="toggleAddIns"
-            android:text="@string/whipped_cream"
-            android:textSize="18sp" />
+            <ImageView
+                android:id="@+id/imageView6"
+                android:layout_width="match_parent"
+                android:layout_height="152px"
+                android:layout_weight="3"
+                app:srcCompat="@mipmap/syrup" />
+
+            <ImageView
+                android:id="@+id/imageView10"
+                android:layout_width="match_parent"
+                android:layout_height="152px"
+                android:layout_weight="3"
+                app:srcCompat="@mipmap/whipped_cream" />
+
+        </LinearLayout>
 
     </LinearLayout>
-
-    <ImageView
-        android:id="@+id/imageView6"
-        android:layout_width="155dp"
-        android:layout_height="144dp"
-        android:layout_marginStart="55dp"
-        android:layout_marginTop="10dp"
-        app:layout_constraintStart_toStartOf="@+id/imageView8"
-        app:layout_constraintTop_toBottomOf="@+id/imageView4"
-        app:srcCompat="@mipmap/cream" />
-
-    <ImageView
-        android:id="@+id/imageView7"
-        android:layout_width="123dp"
-        android:layout_height="110dp"
-        android:layout_marginBottom="139dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/imageView10"
-        app:layout_constraintStart_toStartOf="parent"
-        app:srcCompat="@mipmap/caramel" />
-
-    <ImageView
-        android:id="@+id/imageView8"
-        android:layout_width="122dp"
-        android:layout_height="123dp"
-        app:layout_constraintBottom_toTopOf="@+id/imageView7"
-        app:layout_constraintEnd_toStartOf="@+id/imageView9"
-        app:srcCompat="@mipmap/whipped_cream" />
-
-    <ImageView
-        android:id="@+id/imageView9"
-        android:layout_width="129dp"
-        android:layout_height="133dp"
-        android:layout_marginEnd="10dp"
-        app:layout_constraintBottom_toTopOf="@+id/imageView10"
-        app:layout_constraintEnd_toStartOf="@+id/linearLayout5"
-        app:srcCompat="@mipmap/milk" />
-
-    <ImageView
-        android:id="@+id/imageView10"
-        android:layout_width="118dp"
-        android:layout_height="89dp"
-        android:layout_marginEnd="25dp"
-        app:layout_constraintEnd_toStartOf="@+id/linearLayout5"
-        app:srcCompat="@mipmap/syrup"
-        tools:layout_editor_absoluteY="505dp" />
-
-    <TextView
-        android:id="@+id/textView5"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/subtotal"
-        app:layout_constraintBottom_toBottomOf="@+id/subtotalValue"
-        app:layout_constraintEnd_toStartOf="@+id/subtotalValue"
-        app:layout_constraintHorizontal_bias="0.361"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0" />
 
     <TextView
         android:id="@+id/subtotalValue"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="40dp"
-        android:layout_marginEnd="272dp"
-        android:text="@string/zero_subtotal"
+        android:layout_marginTop="24dp"
+        android:text="@string/subtotal"
+        android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <TextView
-        android:id="@+id/textView7"
+    <Spinner
+        android:id="@+id/spinner"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/quantity_label"
-        app:layout_constraintEnd_toStartOf="@+id/quantityText"
-        app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="627dp" />
-
-    <EditText
-        android:id="@+id/quantityText"
-        android:layout_width="212dp"
-        android:layout_height="32dp"
-        android:layout_marginStart="34dp"
-        android:layout_marginTop="28dp"
-        android:layout_marginEnd="74dp"
-        android:ems="10"
-        android:inputType="number"
+        android:entries="@array/coffeeQuant"
+        app:layout_constraintBottom_toTopOf="@+id/addToOrder"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/textView7"
-        app:layout_constraintTop_toBottomOf="@+id/imageView10" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
