--- a/app/src/main/res/layout/activity_orders.xml
+++ b/app/src/main/res/layout/activity_orders.xml
@@ -7,11 +7,14 @@
     tools:context=".OrdersActivity">
 
     <ListView
-        android:id="@+id/listView"
-        android:layout_width="410dp"
-        android:layout_height="365dp"
-        tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY="365dp" />
+        android:id="@+id/orderView"
+        android:layout_width="415dp"
+        android:layout_height="258dp"
+        android:layout_marginEnd="1dp"
+        android:layout_marginBottom="1dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <Button
         android:id="@+id/button"
@@ -20,40 +23,57 @@
         android:layout_marginStart="161dp"
         android:layout_marginEnd="162dp"
         android:layout_marginBottom="60dp"
-        android:text="Button"
-        app:layout_constraintBottom_toTopOf="@+id/listView"
+        android:text="Remove Order"
+        android:onClick="removeOrder"
+        app:layout_constraintBottom_toTopOf="@+id/orderView"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
         android:id="@+id/textView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="134dp"
+        android:layout_marginTop="86dp"
+        android:layout_marginBottom="367dp"
         android:text="Total"
-        tools:layout_editor_absoluteX="283dp"
-        tools:layout_editor_absoluteY="86dp" />
+        app:layout_constraintBottom_toTopOf="@+id/orderView"
+        app:layout_constraintStart_toEndOf="@+id/orderNumber"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/storeOrdersTotal"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="18dp"
+        android:layout_marginTop="86dp"
+        android:layout_marginBottom="367dp"
         android:text="@string/zero_subtotal"
-        tools:layout_editor_absoluteX="334dp"
-        tools:layout_editor_absoluteY="86dp" />
+        app:layout_constraintBottom_toTopOf="@+id/orderView"
+        app:layout_constraintStart_toEndOf="@+id/textView3"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Spinner
-        android:id="@+id/spinner2"
+        android:id="@+id/orderNumber"
         android:layout_width="78dp"
         android:layout_height="18dp"
-        tools:layout_editor_absoluteX="71dp"
-        tools:layout_editor_absoluteY="83dp" />
+        android:layout_marginStart="40dp"
+        android:layout_marginTop="83dp"
+        android:layout_marginBottom="264dp"
+        app:layout_constraintBottom_toTopOf="@+id/orderView"
+        app:layout_constraintStart_toEndOf="@+id/textView10"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.514" />
 
     <TextView
         android:id="@+id/textView10"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="83dp"
+        android:layout_marginBottom="263dp"
         android:text="Order"
-        tools:layout_editor_absoluteX="16dp"
-        tools:layout_editor_absoluteY="83dp" />
+        app:layout_constraintBottom_toTopOf="@+id/orderView"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
